# trip_plan

./: BACKEND_TYPE_FIX_SUMMARY.md  README.md  TESTING_ISSUES_AND_RECOMMENDATIONS.md  WEBAPP_TEST_REPORT.md  complete_page_test_report_20260117_180322.md  docker-compose.supabase.yml  docker-compose.yml  package-lock.json  playwright_trip_test.py  simple_playwright_test.py  test_builtin_playwright.py  test_e2e_trip_planning.py  test_frontend_ai_planning.py  test_frontend_api.sh  test_node_playwright.js  test_playwright_mcp.py  test_results_20260117_175201.md  test_results_20260118_140700.md  verify_database.py  verify_installation.sh  web_test_form.html
backend/: .dockerignore  .env.backup  .env.example  .gitignore  Dockerfile  MYSQL_MIGRATION.md  README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt  start_backend.sh
backend/app/: ai_providers.py  ai_providers_example.py  api_models.py  database.py  db_models.py  models.py
backend/app/agents/: accommodation.py  attraction.py  base.py  budget.py  coordinator.py  food.py  planner.py  transport.py
backend/app/agentscope_agents/: __init__.py  coordinator.py  mcp_config.py
backend/app/agentscope_agents/agents/: __init__.py  accommodation_agent.py  base_agent.py  (+7 more)
backend/tests/: test_agents.py  test_ai_providers.py  test_api.py  test_config_integration.py  test_frontend_backend_integration.py  test_full_integration.py
backend/tests/agents/: test_accommodation_agent.py  test_coordinator.py  test_specialized_agents.py  test_transport_agent.py
backend/tests/integration/: test_multi_agent_planning.py
(+66 files in other folders)
